# human2robot_cnmp

./: .gitignore  Readme.md  data.ipynb  data.py  dataset_utils.py  demonstration.py  environment.py  interactive_test.py  models.py  torobo.py  train.ipynb  train2.ipynb  try.py  utils.py
torobo_robot/: CHANGELOG.md  README.md  torobo.urdf
torobo_robot/rbdl/: CMakeLists.txt
torobo_robot/realsense_install/: CMakeLists.txt  README.md  install.sh  realsense_tag_2.1.4.patch
torobo_robot/torobo_camera/: CMakeLists.txt
torobo_robot/torobo_camera/config/: camera_link_tf.yaml  config.yaml  marker_tf.yaml
torobo_robot/torobo_camera/launch/: camera_link_tf_estimator.launch  camera_link_tf_publisher.launch  rs_rgbd.launch
torobo_robot/torobo_camera/scripts/: camera_link_tf_estimator.py  camera_link_tf_publisher.py
torobo_robot/torobo_collision_detector/: CMakeLists.txt
torobo_robot/torobo_common/: CMakeLists.txt
torobo_robot/torobo_control/: CMakeLists.txt
torobo_robot/torobo_driver/: CMakeLists.txt
torobo_robot/torobo_dynamics/: CMakeLists.txt
torobo_robot/torobo_gazebo/: CMakeLists.txt
torobo_robot/torobo_gripper_action_controller/: CHANGELOG.rst  CMakeLists.txt
torobo_robot/torobo_gripper_action_controller/include/torobo_gripper_action_controller/: gripper_action_controller.h  gripper_action_controller_impl.h  hardware_interface_adapter.h
torobo_robot/torobo_gripper_action_controller/src/: gripper_action_controller.cpp
torobo_robot/torobo_motion_manager/: CMakeLists.txt
torobo_robot/torobo_msgs/: CMakeLists.txt
(+292 files in other folders)
